--- a/index.html
+++ b/index.html
@@ -9,8 +9,51 @@
 </head>
 
 <body>
-   
+	<head>
+		<p> Slogan <img src="cdm.png" alt="logo de la CDM"/> </p>    
 		<h1>La célèbre CDM a désormais son site internet!</h1>
+	</head>
+	<nav>
+		<ul>
+			<li><a href="La_CDM.html">Présentation</a></li>
+			<li><a href="equipe.html">L'équipe</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+	</nav>
+
+	<section>
+		<p>A la decouverte de la nature francilienne<br />
+		   La CDM, qu'est-ce que c'est ?</p>
+
+		<h2>La Club de Marche</h2>
+		
+		<p>Composée de quatre randonneuses permanentes, nous vous proposons des marches à proximité de Paris. 
+			Contemplation, relaxation, sylvothérapie, cueillette, un programme de pur plaisir pour un max de fun !
+				Tous les dimanches matins</p>
+		
+		<p>Vous pourrez apprendre à reconnaitre la flore francilienne, les champignons vénéneux, et faire la différence entre un parc naturel et un squat </p>
+
+		<h2>Une organisation milimetrée</h2>
+		
+		<p>Vous avez du mal à comprendre le réseau de la RATP ?<br />
+		Ne vous inquiétez pas, tout sera organisé pour vous : une heure, une gare de rendez-vous, une destination sera soigneusement choisie à l'avance !</p>
+		
+		<h2>Retrouvez nos précedentes sorties</h2>
+		<p> Le parcours, les stats, les photos :) </p>
+		<ul>
+		<li>Parc de Saint Cloud</li>
+		<li>Meudon et son ménire</li>
+		<li>Arrivé à Cergy</li>
+		<li>La forêt de fontainebleau
+		
+		</li>
+	</section>
+	<footer>
+            <p>Copyright Zozor - Tous droits réservés<br />
+
+        </footer>
+	
+</ul>
 </body>
 
 
