--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		<h2>Une organisation milimetrée</h2>
 		
-		<p>Vous avez du mal à comprendre le réseau de la RATP ?<br />
+		<p>Vous avez du mal à comprendre le réseau de la RATP ?
 		Ne vous inquiétez pas, tout sera organisé pour vous : une heure, une gare de rendez-vous, une destination sera soigneusement choisie à l'avance !</p>
 		
 		<h2>Retrouvez nos précedentes sorties</h2>
@@ -47,9 +47,10 @@
 		<li>La forêt de fontainebleau
 		
 		</li>
+		</ul>
 	</section>
 	<footer>
-            <p>Copyright Zozor - Tous droits réservés<br />
+            <p>Copyright CDM- Tous droits réservés<br />
 
         </footer>
 	
