--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 	</head>
 	<nav>
 		<ul>
-			<li><a href="La_CDM.html">Présentation</a></li>
-			<li><a href="equipe.html">L'équipe</a></li>
-			<li><a href="contact.html">Contact</a></li>
+			<li><a href="#section1">Présentation</a></li>
+			<li><a href="#section2">Sorties </a> </li>
+			<li><a href="#section3">Photos</a></li>
 		</ul>
 	</nav>
 
 	<section>
-		<p>A la decouverte de la nature francilienne<br />
+		<p>A la decouverte de la nature francilienne
 		   La CDM, qu'est-ce que c'est ?</p>
 
 		<h2>La Club de Marche</h2>
@@ -54,7 +54,6 @@
 
         </footer>
 	
-</ul>
 </body>
 
 
