--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 		
 		<p>Vous avez du mal à comprendre le réseau de la RATP ?
 		Ne vous inquiétez pas, tout sera organisé pour vous : une heure, une gare de rendez-vous, une destination sera soigneusement choisie à l'avance !</p>
-		
+		</section>
+		<section>
 		<h2>Retrouvez nos précedentes sorties</h2>
 		<p> Le parcours, les stats, les photos :) </p>
 		<ul>
@@ -49,6 +50,17 @@
 		</li>
 		</ul>
 	</section>
+	<section>
+		<h1> Les photos </h1>
+		<p> Des paysages, et des personnes magnifiques </p>
+		<img src="photos1.jpeg">
+		<img src="photo7.jpeg">
+		<img src="photo3.jpeg">
+		<img src="photo4.jpeg">
+		<img src="photo5.jpeg">
+		<img src="photo6.jpeg">
+		<img src="photos8.jpeg">
+		
 	<footer>
             <p>Copyright CDM- Tous droits réservés<br />
 
