--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 	<section>
 		<h1> Les photos </h1>
 		<p> Des paysages, et des personnes magnifiques </p>
-		<img src="photos1.jpeg">
-		<img src="photo7.jpeg">
-		<img src="photo3.jpeg">
-		<img src="photo4.jpeg">
-		<img src="photo5.jpeg">
-		<img src="photo6.jpeg">
-		<img src="photos8.jpeg">
+		<img src="photos1.jpeg" height="470" width="332" > 
+		<img src="photo7.jpeg" height="470" width="332" > 
+		<img src="photo3.jpeg" height="470" width="332" > 
+		<img src="photo4.jpeg" height="470" width="332" > 
+		<img src="photo5.jpeg" height="470" width="332" > 
+		<img src="photo6.jpeg" height="470" width="332" > 
+		<img src="photos8.jpeg" height="470" width="332" > 
 		
 	<footer>
             <p>Copyright CDM- Tous droits réservés<br />
