--- a/index.html
+++ b/index.html
@@ -22,22 +22,30 @@
 	</nav>
 
 	<section>
-		<p>A la decouverte de la nature francilienne
-		   La CDM, qu'est-ce que c'est ?</p>
 
 		<h2>La Club de Marche</h2>
 		
-		<p>Composée de quatre randonneuses permanentes, nous vous proposons des marches à proximité de Paris. 
-			Contemplation, relaxation, sylvothérapie, cueillette, un programme de pur plaisir pour un max de fun !
-				Tous les dimanches matins</p>
+		<p> La CDM est un club de marche, à la découverte de la nature francilienne.
+
+Vous pourrez apprendre à reconnaitre la flore francilienne, les champignons vénéneux, et faire la différence entre un parc naturel et un squat </p>
+		
 		
 		<p>Vous pourrez apprendre à reconnaitre la flore francilienne, les champignons vénéneux, et faire la différence entre un parc naturel et un squat </p>
 
-		<h2>Une organisation milimetrée</h2>
-		
+		<h2>Une équipe organisée </h2>
+		 <p>Nous sommes quatres randonneuses permanentes.Nous vous proposons des marches à proximité de Paris. 
+			Un programme de pur plaisir pour un max de fun !</p>
+					<ul>
+					<li>Contemplation</li>
+					<li>Sylvothérapie</li>
+					<li>Contemplation</li>
+					<li>Chants</li>
+					</ul>
+				  <p> Rendez-vous tous les dimanches ! </p>
 		<p>Vous avez du mal à comprendre le réseau de la RATP ?
 		Ne vous inquiétez pas, tout sera organisé pour vous : une heure, une gare de rendez-vous, une destination sera soigneusement choisie à l'avance !</p>
 		</section>
+	
 		<section>
 		<h2>Retrouvez nos précedentes sorties</h2>
 		<p> Le parcours, les stats, les photos :) </p>
