--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<head>
-		<p> Slogan <img src="cdm.png" alt="logo de la CDM"/> </p>    
+		<p> Slogan <img src="logo.PNG" alt="logo de la CDM"/> </p>    
 		<h1>La célèbre CDM a désormais son site internet!</h1>
 	</head>
 	<nav>
