--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 
 		<h2>La Club de Marche</h2>
 		
-		<p> La CDM est un club de marche, à la découverte de la nature francilienne.
-
-Vous pourrez apprendre à reconnaitre la flore francilienne, les champignons vénéneux, et faire la différence entre un parc naturel et un squat </p>
+		<p> La CDM est un club de marche, à la découverte de la nature francilienne. </p>
 		
 		
 		<p>Vous pourrez apprendre à reconnaitre la flore francilienne, les champignons vénéneux, et faire la différence entre un parc naturel et un squat </p>
@@ -67,7 +65,11 @@ Vous pourrez apprendre à reconnaitre la flore francilienne, les champignons vé
 		<img src="photo5.jpeg" height="470" width="342" > 
 		<img src="photo6.jpeg" height="470" width="342" > 
 		<img src="photo8.jpeg" height="470" width="342" > 
-		
+		</section>
+	<section>
+		<p> Contactez-nous directement sur Insta ! la_c.d.m </p> 
+		<li><a href="#section3"> lien vide </a></li>
+	</section>
 	<footer>
             <p>Copyright CDM- Tous droits réservés<br />
 
