--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<p> Le parcours, les stats, les photos :) </p>
 		<ul>
 		<li>Parc de Saint Cloud</li>
-		<li>Meudon et son ménire</li>
+		<li>Meudon et son menhir</li>
 		<li>Arrivé à Cergy</li>
 		<li>La forêt de fontainebleau
 		
