--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 		<ul>
 		<li>Parc de Saint Cloud</li>
 		<li>Meudon et son menhir</li>
-		<li>Arrivé à Cergy</li>
-		<li>La forêt de fontainebleau
+		<li>Arrivée à Cergy</li>
+		<li>La forêt de Fontainebleau
 		
 		</li>
 		</ul>
