--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<p> La CDM est un club de marche, à la découverte de la nature francilienne. </p>
 		
 		
-		<p>Vous pourrez apprendre à reconnaitre la flore francilienne, les champignons vénéneux, et faire la différence entre un parc naturel et un squat </p>
+		<p>Vous pourrez apprendre à reconnaitre la flore francilienne, les champignons vénéneux, et faire la différence entre un parc naturel et un squat. </p>
 
 		<h2>Une équipe organisée </h2>
 		 <p>Nous sommes quatres randonneuses permanentes.Nous vous proposons des marches à proximité de Paris. 
