--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		</section>
 	<section>
 		<p> Contactez-nous directement sur Insta ! la_c.d.m </p> 
-		<li><a href="#section3"> lien vide </a></li>
+		<li><a href="https://instagram.com/la_c.d.m?r=nametag"> lien qui marche ? </a></li>
 	</section>
 	<footer>
             <p>Copyright CDM- Tous droits réservés<br />
