--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 		<img src="photo8.jpeg" height="470" width="342" > 
 		</section>
 	<section>
-		<p> Contactez-nous directement sur Insta ! la_c.d.m </p> 
-		<li><a href="https://instagram.com/la_c.d.m?r=nametag"> lien qui marche ? </a></li>
+		<p> Contactez-nous directement sur Insta ! la_c.d.m </p> <a href="https://instagram.com/la_c.d.m?r=nametag"> lien qui marche ? </a>
 	</section>
 	<footer>
             <p>Copyright CDM- Tous droits réservés<br />
