--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<img src="photo8.jpeg" height="470" width="342" > 
 		</section>
 	<section>
-		<p> Contactez-nous directement sur Insta ! la_c.d.m </p> <a href="https://instagram.com/la_c.d.m?r=nametag"> lien qui marche ? </a>
+		<p> Contactez-nous directement sur Insta ! la_c.d.m <a href="https://instagram.com/la_c.d.m?r=nametag"> lien qui marche ? </a></p> 
 	</section>
 	<footer>
             <p>Copyright CDM- Tous droits réservés<br />
